--- a/src/main/resources/fxml/AddBookPage.fxml
+++ b/src/main/resources/fxml/AddBookPage.fxml
@@ -1,14 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.AddBookPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="AnchorPane" prefHeight="584.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <AnchorPane prefHeight="584.0" prefWidth="512.0" style="-fx-background-color: #dce6e5;">
+            <children>
+                <AnchorPane layoutY="-6.0" prefHeight="84.0" prefWidth="512.0" style="-fx-background-color: #FFCF1E;">
+                    <children>
+                        <Label layoutX="182.0" layoutY="30.0" prefHeight="36.0" prefWidth="136.0" text="ADD NEW BOOK " textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="16.0" />
+                            </font>
+                        </Label>
+                        <Button fx:id="backBtn" layoutX="23.0" layoutY="35.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" textFill="WHITE" />
+                    </children>
+                </AnchorPane>
+                <TextField fx:id="bookTitleField" layoutX="224.0" layoutY="103.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book title" />
+                <TextField fx:id="bookISBNField" layoutX="224.0" layoutY="147.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book ISBN" />
+                <TextField fx:id="bookAuthorField" layoutX="224.0" layoutY="192.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book Author" />
+                <TextField fx:id="bookImagePathField" layoutX="224.0" layoutY="235.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book ImagePath" />
+                <TextField fx:id="bookPublisherField" layoutX="224.0" layoutY="287.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book publisher" />
+                <TextField fx:id="bookYearOfPublicationField" layoutX="224.0" layoutY="331.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book yearOfPublication" />
+                <Label layoutX="79.0" layoutY="106.0" prefHeight="19.0" prefWidth="28.0" text="Title">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="79.0" layoutY="150.0" text="ISBN">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="195.0" text="Author">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="238.0" text="Image Path">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="79.0" layoutY="290.0" text="Publisher">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Label layoutX="80.0" layoutY="334.0" text="Year Of Publication">
+                    <font>
+                        <Font size="13.0" />
+                    </font>
+                </Label>
+                <Button fx:id="addbookBtn" layoutX="244.0" layoutY="517.0" mnemonicParsing="false" onAction="#addBook" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: #FFCF1E; -fx-background-radius: 7;" text="ADD BOOK" textFill="WHITE" />
+                <AnchorPane layoutX="-2.0" layoutY="78.0" prefHeight="7.0" prefWidth="512.0" style="-fx-background-color: white;" />
+                <Label fx:id="msgLabel" layoutX="78.0" layoutY="480.0" prefHeight="17.0" prefWidth="187.0" textFill="#b96909" />
+                <Button fx:id="backBtn" layoutX="78.0" layoutY="513.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="58.0" style="-fx-background-color: transparent;" />
+                <FontAwesomeIcon fill="#030303" glyphName="ANGLE_DOUBLE_LEFT" layoutX="99.0" layoutY="413.0" size="2.5em" text="" />
+            <Label layoutX="80.0" layoutY="378.0" text="Number Of Page">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="bookNumberOfPageField" layoutX="224.0" layoutY="375.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book NumberOfPage" />
+            <Label layoutX="80.0" layoutY="418.0" text="Quantity">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <TextField fx:id="bookQuantityField" layoutX="224.0" layoutY="415.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book quantity" />
+            </children>
+        </AnchorPane>
+    </children>
 </AnchorPane>
