--- a/src/main/resources/fxml/SignUpPage.fxml
+++ b/src/main/resources/fxml/SignUpPage.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/styleLoginPage.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/styleLoginPage.css">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="567.0" prefWidth="768.0" stylesheets="@../styles/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox prefHeight="567.0" prefWidth="210.0" styleClass="page_logo_image" stylesheets="@../styles/style.css">
         <FontAwesomeIconView glyphName="BOOK" size="35" />
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="OOP_LIMT" />
     </VBox>
-    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="page_container" stylesheets="@../styles/styleLoginPage.css">
+    <AnchorPane layoutX="242.0" layoutY="30.0" prefHeight="506.0" prefWidth="493.0" styleClass="page_container" stylesheets="@../styles/style.css">
         <Hyperlink layoutX="31.0" layoutY="32.0" prefHeight="32.0" prefWidth="66.0" text="&gt; Back">
             <font>
                 <Font size="15.0" />
