--- a/src/main/resources/fxml/SettingPage.fxml
+++ b/src/main/resources/fxml/SettingPage.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.ScanISBNPage"
+            fx:controller="com.limt.Controllers.SettingPageController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
